Added loading animation view on splash screen. Created Main Drawer Activity. Redesigned menu items in MDA. Deleted AppBar Menu. Redesigned Drawer. Added drawable icons.

--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,8 +10,16 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="progernapplications.scyscannerapplication_v2.SplashScreen">
 
-    <TextView
+    <com.eyalbira.loadingdots.LoadingDots
+        android:id="@+id/splash_dots"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        app:LoadingDots_dots_color="@color/colorPrimary"
+        app:LoadingDots_dots_count="4"
+        app:LoadingDots_dots_size="15dp"
+        app:LoadingDots_dots_space="5dp"
+        app:LoadingDots_jump_duration="400"
+        app:LoadingDots_jump_height="10dp" />
 </RelativeLayout>
