--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="progernapplications.scyscannerapplication_v2.SplashScreen">
+    tools:context=".fragments.SplashScreen">
 
     <com.eyalbira.loadingdots.LoadingDots
         android:id="@+id/splash_dots"
