--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -14,9 +14,9 @@
             android:id="@+id/currency_autocomp"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
+            android:layout_below="@+id/marketCountry_autocomp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/locations_frame"
             android:hint="Currency" />
 
@@ -24,8 +24,8 @@
             android:id="@+id/marketCountry_autocomp"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/currency_autocomp"
-            android:layout_below="@+id/currency_autocomp"
+            android:layout_alignStart="@+id/locale_autocomp"
+            android:layout_below="@+id/locale_autocomp"
             android:layout_marginTop="20dp"
             android:background="@drawable/locations_frame"
             android:hint="Market country" />
@@ -34,8 +34,8 @@
             android:id="@+id/locale_autocomp"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/marketCountry_autocomp"
-            android:layout_below="@+id/marketCountry_autocomp"
+            android:layout_alignParentTop="true"
+            android:layout_alignStart="@+id/currency_autocomp"
             android:layout_marginTop="20dp"
             android:background="@drawable/locations_frame"
             android:hint="Language" />
