--- a/app/src/main/res/layout-land/fragment_flights.xml
+++ b/app/src/main/res/layout-land/fragment_flights.xml
@@ -63,7 +63,7 @@
         <Button
             android:id="@+id/search_button"
             android:layout_width="200dp"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="30dp"
             android:layout_toEndOf="@+id/outbound_text"
