--- a/app/src/main/res/layout/fragment_flights.xml
+++ b/app/src/main/res/layout/fragment_flights.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent"
         android:layout_margin="20dp">
 
-        <EditText
+        <AutoCompleteTextView
             android:id="@+id/outbound_text"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
@@ -24,7 +24,7 @@
             android:textColor="@color/colorPrimaryText"
             android:textSize="20sp" />
 
-        <EditText
+        <AutoCompleteTextView
             android:id="@+id/inbound_text"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
@@ -46,7 +46,7 @@
             android:layout_marginTop="20dp"
             android:src="@drawable/change_locations" />
 
-        <EditText
+        <AutoCompleteTextView
             android:id="@+id/outbound_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -59,7 +59,7 @@
             android:textColor="@color/colorPrimaryText"
             android:textSize="15sp" />
 
-        <EditText
+        <AutoCompleteTextView
             android:id="@+id/inbound_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
