--- a/app/src/main/res/layout-land/fragment_flights.xml
+++ b/app/src/main/res/layout-land/fragment_flights.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <EditText
+        <AutoCompleteTextView
             android:id="@+id/outbound_text"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
@@ -21,7 +21,7 @@
             android:textColor="@color/colorPrimaryText"
             android:textSize="20sp" />
 
-        <EditText
+        <AutoCompleteTextView
             android:id="@+id/inbound_text"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
@@ -34,7 +34,7 @@
             android:textColor="@color/colorPrimaryText"
             android:textSize="20sp" />
 
-        <EditText
+        <AutoCompleteTextView
             android:id="@+id/outbound_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -47,7 +47,7 @@
             android:textColor="@color/colorPrimaryText"
             android:textSize="15sp" />
 
-        <EditText
+        <AutoCompleteTextView
             android:id="@+id/inbound_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -78,5 +78,15 @@
             android:layout_alignBottom="@+id/outbound_text"
             android:layout_centerHorizontal="true"
             android:src="@drawable/change_locations" />
+
+        <Switch
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Inbound"
+            android:id="@+id/inbound_switch"
+            android:textSize="15sp"
+            android:layout_below="@+id/inbound_date"
+            android:layout_alignStart="@+id/inbound_date"
+            android:layout_marginTop="10dp" />
     </RelativeLayout>
 </LinearLayout>
