--- a/app/src/main/res/layout/place_row.xml
+++ b/app/src/main/res/layout/place_row.xml
@@ -12,34 +12,33 @@
             android:id="@+id/place_ID"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/imageView2"
             android:layout_marginLeft="5dp"
-            android:layout_toEndOf="@+id/imageView2"
             android:text="PLACE_ID"
-            android:textColor="@color/colorPrimaryText"
-            android:textSize="20sp" />
+            android:textColor="@color/colorSecondaryText"
+            android:textSize="15sp"
+            android:layout_below="@+id/country_name"
+            android:layout_toEndOf="@+id/imageView2" />
 
         <TextView
             android:id="@+id/place_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/place_ID"
             android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp"
             android:text="PLACE_NAME"
-            android:textColor="@color/colorSecondaryText"
-            android:textSize="15sp" />
+            android:textColor="@color/colorPrimaryText"
+            android:textSize="15sp"
+            android:layout_alignTop="@+id/imageView2"
+            android:layout_toEndOf="@+id/imageView2" />
 
         <TextView
             android:id="@+id/country_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/place_name"
-            android:layout_toEndOf="@+id/place_name"
             android:text="COUNTRY_NAME"
-            android:textColor="@color/colorSecondaryText"
-            android:textSize="15sp" />
+            android:textColor="@color/colorPrimaryText"
+            android:textSize="15sp"
+            android:layout_below="@+id/place_name"
+            android:layout_alignStart="@+id/place_name" />
 
         <ImageView
             android:id="@+id/imageView2"
