- Created "Other" class to handle all settings that doesn't refers to API Settings or HTTP-request settings - Created a helpful AlertDialog in Settings fragment - Added a mark in Settings fragment near the "Language" ACTV - Created method, to analyze the outbound/inbound strings and get location ID from them (for ScyScanner API requests)

--- a/app/src/main/res/layout-land/fragment_flights.xml
+++ b/app/src/main/res/layout-land/fragment_flights.xml
@@ -19,7 +19,8 @@
             android:background="@drawable/locations_frame"
             android:hint="Outbound location"
             android:textColor="@color/colorPrimaryText"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:inputType="textPhonetic"/>
 
         <AutoCompleteTextView
             android:id="@+id/inbound_text"
@@ -32,7 +33,8 @@
             android:background="@drawable/locations_frame"
             android:hint="Inbound location"
             android:textColor="@color/colorPrimaryText"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:inputType="textPhonetic"/>
 
         <AutoCompleteTextView
             android:id="@+id/outbound_date"
@@ -45,7 +47,8 @@
             android:background="@drawable/locations_frame"
             android:hint="Outbound date"
             android:textColor="@color/colorPrimaryText"
-            android:textSize="15sp" />
+            android:textSize="15sp"
+            android:inputType="textPhonetic"/>
 
         <AutoCompleteTextView
             android:id="@+id/inbound_date"
@@ -58,7 +61,8 @@
             android:background="@drawable/locations_frame"
             android:hint="Inbound date"
             android:textColor="@color/colorPrimaryText"
-            android:textSize="15sp" />
+            android:textSize="15sp"
+            android:inputType="textPhonetic"/>
 
         <Button
             android:id="@+id/search_button"
