--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -18,7 +18,8 @@
             android:layout_alignTop="@+id/view2"
             android:layout_marginTop="20dp"
             android:background="@drawable/locations_frame"
-            android:hint="Currency" />
+            android:hint="Currency"
+            android:inputType="textPhonetic"/>
 
         <View
             android:id="@+id/view"
@@ -37,7 +38,8 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
             android:background="@drawable/locations_frame"
-            android:hint="Market country" />
+            android:hint="Market country"
+            android:inputType="textPhonetic"/>
 
         <View
             android:id="@+id/view2"
@@ -56,7 +58,8 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
             android:background="@drawable/locations_frame"
-            android:hint="Language"
+            android:hint="Language*"
+            android:inputType="textPhonetic"
             />
 
         <Button
@@ -96,6 +99,17 @@
             android:layout_alignTop="@+id/currency_autocomp"
             android:layout_marginRight="10dp"
             android:src="@drawable/currency_icon" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="*"
+            android:textSize="25sp"
+            android:textColor="@color/colorPrimaryText"
+            android:layout_marginLeft="5dp"
+            android:id="@+id/textView"
+            android:layout_alignTop="@+id/locale_autocomp"
+            android:layout_toEndOf="@+id/locale_autocomp" />
 
     </RelativeLayout>
 </FrameLayout>
