- Created a DatePickerDialog for inbound date and outbound date, which returns correctly (due to ScyScanner requirements) date - A minor changes flights fragment - Added switcher configuration in Other class - Optimized code in FlightsFragments

--- a/app/src/main/res/layout/fragment_flights.xml
+++ b/app/src/main/res/layout/fragment_flights.xml
@@ -48,7 +48,7 @@
             android:layout_marginTop="20dp"
             android:src="@drawable/change_locations" />
 
-        <AutoCompleteTextView
+        <TextView
             android:id="@+id/outbound_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -62,7 +62,7 @@
             android:textSize="15sp"
             android:inputType="textPhonetic"/>
 
-        <AutoCompleteTextView
+        <TextView
             android:id="@+id/inbound_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
