--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -4,8 +4,6 @@
     android:layout_height="match_parent"
     tools:context=".fragments.SettingsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
@@ -18,7 +16,7 @@
             android:layout_alignTop="@+id/view2"
             android:layout_marginTop="20dp"
             android:background="@drawable/locations_frame"
-            android:hint="Currency"
+            android:hint="@string/currency"
             android:inputType="textPhonetic"/>
 
         <View
@@ -38,7 +36,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
             android:background="@drawable/locations_frame"
-            android:hint="Market country"
+            android:hint="@string/market_country"
             android:inputType="textPhonetic"/>
 
         <View
@@ -58,7 +56,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
             android:background="@drawable/locations_frame"
-            android:hint="Language*"
+            android:hint="@string/language"
             android:inputType="textPhonetic"
             />
 
@@ -70,7 +68,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="100dp"
             android:background="@drawable/search_button"
-            android:text="Submit"
+            android:text="@string/submit_button"
             android:textColor="@color/colorPrimary" />
 
         <ImageView
@@ -100,16 +98,34 @@
             android:layout_marginRight="10dp"
             android:src="@drawable/currency_icon" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="*"
-            android:textSize="25sp"
-            android:textColor="@color/colorPrimaryText"
+        <ImageView
+            android:id="@+id/clear_country"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
+            android:layout_above="@+id/view2"
+            android:layout_marginBottom="13dp"
             android:layout_marginLeft="5dp"
-            android:id="@+id/textView"
-            android:layout_alignTop="@+id/locale_autocomp"
-            android:layout_toEndOf="@+id/locale_autocomp" />
+            android:layout_toEndOf="@+id/marketCountry_autocomp"
+            android:src="@drawable/cross" />
+
+        <ImageView
+            android:id="@+id/clear_language"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
+            android:layout_above="@+id/view"
+            android:layout_marginBottom="13dp"
+            android:layout_marginLeft="5dp"
+            android:layout_toEndOf="@+id/locale_autocomp"
+            android:src="@drawable/cross" />
+
+        <ImageView
+            android:id="@+id/clear_currency"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
+            android:layout_alignBottom="@+id/currency_icon"
+            android:layout_alignStart="@+id/clear_country"
+            android:layout_marginBottom="13dp"
+            android:src="@drawable/cross" />
 
     </RelativeLayout>
 </FrameLayout>
