--- a/app/src/main/res/drawable/locations_frame.xml
+++ b/app/src/main/res/drawable/locations_frame.xml
@@ -9,4 +9,6 @@
         android:left="10dp"
         android:right="10dp"
         android:top="10dp" />
+
+    <corners android:radius="5dp" />
 </shape>
