--- a/app/src/main/res/layout/fragment_flights.xml
+++ b/app/src/main/res/layout/fragment_flights.xml
@@ -20,10 +20,10 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="40dp"
             android:background="@drawable/locations_frame"
-            android:hint="Outbound location"
+            android:hint="@string/outbound_location"
+            android:inputType="textPhonetic"
             android:textColor="@color/colorPrimaryText"
-            android:textSize="20sp"
-            android:inputType="textPhonetic"/>
+            android:textSize="20sp" />
 
         <AutoCompleteTextView
             android:id="@+id/inbound_text"
@@ -33,10 +33,10 @@
             android:layout_below="@+id/change_routes_imgbut"
             android:layout_marginTop="20dp"
             android:background="@drawable/locations_frame"
-            android:hint="Inbound location"
+            android:hint="@string/inbound_location"
+            android:inputType="textPhonetic"
             android:textColor="@color/colorPrimaryText"
-            android:textSize="20sp"
-            android:inputType="textPhonetic"/>
+            android:textSize="20sp" />
 
         <ImageView
             android:id="@+id/change_routes_imgbut"
@@ -57,10 +57,10 @@
             android:layout_marginLeft="15dp"
             android:layout_marginTop="40dp"
             android:background="@drawable/locations_frame"
-            android:hint="Outbound date"
+            android:hint="@string/outbound_date"
+            android:inputType="textPhonetic"
             android:textColor="@color/colorPrimaryText"
-            android:textSize="15sp"
-            android:inputType="textPhonetic"/>
+            android:textSize="15sp" />
 
         <TextView
             android:id="@+id/inbound_date"
@@ -70,10 +70,10 @@
             android:layout_alignTop="@+id/outbound_date"
             android:layout_marginRight="15dp"
             android:background="@drawable/locations_frame"
-            android:hint="Inbound date"
+            android:hint="@string/inbound_date"
+            android:inputType="textPhonetic"
             android:textColor="@color/colorPrimaryText"
-            android:textSize="15sp"
-            android:inputType="textPhonetic"/>
+            android:textSize="15sp" />
 
         <Button
             android:id="@+id/search_button"
@@ -83,18 +83,37 @@
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="30dp"
             android:background="@drawable/search_button"
-            android:text="Search"
+            android:text="@string/search"
             android:textColor="@color/colorPrimary" />
 
         <Switch
+            android:id="@+id/inbound_switch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Inbound"
-            android:id="@+id/inbound_switch"
-            android:textSize="15sp"
-            android:layout_below="@+id/inbound_date"
             android:layout_alignStart="@+id/inbound_date"
-            android:layout_marginTop="10dp" />
+            android:layout_below="@+id/inbound_date"
+            android:layout_marginTop="10dp"
+            android:text="@string/inbound_switch_text"
+            android:textSize="15sp" />
+
+        <ImageView
+            android:id="@+id/clear_outbound"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
+            android:layout_alignBottom="@+id/outbound_text"
+            android:layout_marginBottom="14dp"
+            android:layout_marginLeft="5dp"
+            android:layout_toEndOf="@+id/outbound_text"
+            android:src="@drawable/cross" />
+
+        <ImageView
+            android:id="@+id/clear_inbound"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
+            android:layout_alignBottom="@+id/inbound_text"
+            android:layout_alignStart="@+id/clear_outbound"
+            android:layout_marginBottom="13dp"
+            android:src="@drawable/cross" />
 
     </RelativeLayout>
 
